# qr-cli

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
qr_cli/: __init__.py  cli.py  clipboard.py  generator.py  hotkey.py
tests/: test_qr_cli.py
